# test_practice

./: README.md
Desmos/: CMakeLists.txt  WindowsProject2.cpp
Desmos/Degree/: Degree.cpp  Degree.h
Desmos/Desmos/: Desmos.cpp
Desmos/Functions/: Functions.cpp  Functions.h
Desmos/Graphic headers/: CMakeLists.txt
Desmos/Graphic headers/Functions/: Functions.cpp  Functions.h
Desmos/Graphic headers/Indct/: Indct.cpp
Desmos/Graphic headers/Irr/: Irr.h
Desmos/Graphic headers/Logo/: Logo.cpp  Logo.h
Desmos/Graphic headers/Trig/: Trig.cpp  Trig.h
Desmos/Indct/: Indct.cpp  Indct.h
Desmos/Irr/: Irr.cpp  Irr.h
Desmos/Logo/: Logo.cpp  Logo.h
Desmos/Trig/: Trig.cpp  Trig.h
